[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objeto.tscn" type="PackedScene" id=2]
[ext_resource path="res://background.gd" type="Script" id=3]
[ext_resource path="res://interfaz.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/background.png" type="Texture" id=5]
[ext_resource path="res://Audio/Muerte.wav" type="AudioStream" id=6]
[ext_resource path="res://Audio/MainTheme.ogg" type="AudioStream" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -1, -1, 0, 0, 0, 0, 496, 4, 0, 0, 0, 0, 501, 504, 0, 0, 0, 0, -3, 506, 0, 0, 0, 0, -1, -1 )
}

[node name="mundo" type="Node"]
script = ExtResource( 3 )
Objeto = ExtResource( 2 )

[node name="Fondo" type="TextureRect" parent="."]
margin_right = 500.0
margin_bottom = 500.0
texture = ExtResource( 5 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="objetotimer" type="Timer" parent="."]
wait_time = 0.5

[node name="scoretimer" type="Timer" parent="."]

[node name="iniciotimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="pos inicio" type="Position2D" parent="."]
position = Vector2( 250, 250 )

[node name="camino" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="objetopos" type="PathFollow2D" parent="camino"]
position = Vector2( -1, -1 )
rotation = 0.01006

[node name="interfaz" parent="." instance=ExtResource( 4 )]

[node name="AudioMuerte" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Musica" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="golpe" from="Player" to="." method="game_over"]
[connection signal="timeout" from="objetotimer" to="." method="_on_objetotimer_timeout"]
[connection signal="timeout" from="scoretimer" to="." method="_on_scoretimer_timeout"]
[connection signal="timeout" from="iniciotimer" to="." method="_on_iniciotimer_timeout"]
[connection signal="iniciar_juego" from="interfaz" to="." method="nuevo_juego"]
